Release 3.11.1
--------------

Changes
^^^^^^^

    - [NEXUS/NEWICK] ``suppress_internal_node_taxa`` keyword now actually
      instantiates Taxon objects from internal node labels when 'False', but
      defaults to `True` for consistency with legacy behavior.
    - [SumTrees] Strip out 'support' annotation from node meta-comments before
      annotating tree.


Release 3.11.0
--------------

New Features
^^^^^^^^^^^^

    - New application script for concatenation of branch labels from across
      multiple input trees: `sumlabels.py`.
    - New interoperability class `dendropy.interop.seqgen.SeqGen`:
      wrapper for Seq-Gen integrated into library.
    - New interoperability function `dendropy.interop.muscle.muscle_align()`:
      wrapper for MUSCLE alignment.
    - New interoperability class `dendropy.interop.raxml.RaxmlRunner`:
      wrapper for RAxML.
    - `prune_taxa()` method added to `CharacterMatrix`.
    - Math modules moved to their own subpackage: `dendropy.mathlib`.
    - New module for matrix and vector computations: `dendropy.mathlib.linearalg`.
    - New module for statistical distance calculation: `dendropy.mathlib.distance`.
    - Family of Mahalanobis distance calculation functions in
      `dendropy.mathlib.distance`: `squared_mahalanobis`,
      `squared_mahalanobis_1d`, `mahalanobis`, `mahalanobis_1d`.
    - Better documentation and examples of geodispersal analysis of Lieberman
        and Eldredge (see extras/geodispersal subdirectory).

Release 3.10.1
--------------

Bug Fixes
^^^^^^^^^

    - Split orientation regression bug introduced in 3.10.0 fixed (affected SumTrees and other split comparisons when dealing with unrooted trees).

Release 3.10.0
--------------

New Features
^^^^^^^^^^^^

    - Support for writing preamble blocks in NEXUS format.
    - Support for writing character subsets in NEXUS.
    - Support for user customization of edge label formatting.
    - `find_missing_splits()` method added to `dendropy.Tree()`.